Connect native regions to Flink resource and checkpoint ownership
Run IPC region inputs with owned envelopes, align decoded Arrow bodies without buffer copies, and skip repeated empty-port exports after schema negotiation. Bind native RocksDB cache scopes to actual Flink shared resource leases and honor the configured incremental-checkpoint flag. Include the shared Java runtime/control/state foundation required by these paths and preserve producer-owned buffers through native forwarding.

Validation: 472 native and 5 RocksDB tests. The 567-test Java runtime run was followed by a passing focused rerun of its corrected ownership assertion; direct IPC, shared-region, memory, configured-checkpoint, and wide-type SQL checks pass. No performance result or development native artifact is published.